--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./index.js",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "npm i && vue-cli-service build"
   },
   "dependencies": {
     "core-js": "^3.8.3",
